fixed dynamic businesscard  spacing

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -32,8 +32,7 @@ h3 {
 
 #welcomeUser {
 	position: absolute;
-	top: 18px;
-	left: 115px;	
+	top: 18px;	
 }
 
 #savvy {
@@ -65,7 +64,6 @@ h3 {
 #email {
 	position: absolute;
 	top: 100px;
-	left: 135px;
 }
 
 #address {
